<resources>
    <string name="app_name">Repeatah</string>
    <string name="title_activity_settings">Nastavenia</string>

    <string name="tab_text_1">Testy</string>
    <string name="tab_text_2">Štatistiky</string>

    <string name="topics_label">Moje Témy</string>
    <string name="num_of_drills">Počet testov: %1$d</string>

    <string name="drills_label">Moje Testy</string>
    <string name="num_of_questions">Počet otázok: %1$d</string>

    <string name="settings">Nastavenia</string>

    <string name="time">Čas:</string>
    <string name="points">Body: %1$d</string>
    <string name="next">Ďalej</string>
    <string name="endDrill">Ukončiť test</string>
    <string name="chooseAnswer">Prosím vyberte odpoveď</string>

    <string name="endOfDrill">Koniec testu!</string>
    <string name="yourScore">Vaše skóre:\n%1$d bodov</string>
    <string name="numOfCorrectAnswers">Správne odpovede:\n%1$d/%2$d</string>
    <string name="timeSpentOnTest">Čas testu:\n%1$s</string>
    <string name="finishDrill">Dokončiť</string>
    <string name="back">Späť</string>

    <string name="endDrillAlertTitle">Koniec testu?</string>
    <string name="endDrillAlertMessage">Potvrďte ukončenie testu.\nVýsledok nebude uložený!</string>

    <string name="continueString">Pokračovať</string>
    <string name="endString">Ukončiť</string>

    <string name="daily_reminder_switch_name">Denná pripomienka</string>
    <string name="show_answers_after_test">Zobraziť\nodpovede</string>
    <string name="statistics">Štatistiky</string>
    <string name="statistics_correctness">Priemerná správnosť odpovedí</string>
    <string name="statistics_average_speed">Priemerná rýchlosť</string>
    <string name="statistics_average_points">Priemerné skóre</string>
    <string name="statistics_progress">Progres</string>

    <string name="welcome">Vitajte!</string>
    <string name="welcome_message">Nastavuje sa prostredie.\nPočkajte prosím.</string>

    <string name="downloadErrorMessage">Nepodarilo sa stiahnuť databázu</string>
    <string name="downloadAgain">Stiahnuť znova</string>

    <!--    Settings    -->
    <string name="settingsAnswers">Zobrazovať správne odpovede po dokončení testu</string>
    <string name="settingsNotifications">Zobrazovať notifikácie</string>
    <string name="settingsNotificationsTime">Čas zobrazenia notifikácie</string>

    <!-- Push notifications   -->
    <string name="channelName">Repeatah</string>
    <string name="channelDescription">Repeatah notification</string>
    <string name="notificationTitle">Repeatah</string>
    <string name="notificationDescription">Čo takto si skúsiť nový test?</string>

    <!-- Correct answers fragment   -->
    <string name="correct_answers">Správne\nodpovede</string>

    <!-- Statistics   -->
    <string name="day_monday_shortcut">Po</string>
    <string name="day_tuesday_shortcut">Ut</string>
    <string name="day_wednesday_shortcut">St</string>
    <string name="day_thursday_shortcut">Št</string>
    <string name="day_friday_shortcut">Pi</string>
    <string name="day_saturday_shortcut">So</string>
    <string name="day_sunday_shortcut">Ne</string>

</resources>
