<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistics_correctness"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_marginTop="16dp"
            />
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"

            android:tooltipText="0/0"
            android:isIndicator="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistics_average_speed"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_marginTop="8dp"
            />
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"

            android:tooltipText="0/0"
            android:isIndicator="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistics_average_points"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_marginTop="8dp"
            />
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"

            android:tooltipText="0/0"
            android:isIndicator="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistics_progress"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_marginTop="8dp"
            />


        <com.jjoe64.graphview.GraphView
            android:layout_width = "match_parent"
            android:layout_height = "200dip"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"

            app:seriesData="0=5;2=5;3=0;4=2"
            android:id = "@+id/graph"
            />

    </LinearLayout>

</ScrollView>