<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.SettingsActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <ImageButton
                android:id="@+id/back_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"

                android:background="@drawable/ic_arrow_back_white_24dp"
                android:src="@drawable/ic_arrow_back_white_24dp" />

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"


                android:layout_centerVertical="true"
                android:gravity="center"

                android:text="@string/settings"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />


        </RelativeLayout>

        <ImageView
            android:id="@+id/drill_appbar_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Switch
            android:text="@string/show_answers_after_test"
            android:id="@+id/answers_enabled_switch"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"

            android:checked="true"
            android:onClick="timePickerOnClick"
            />

        <Switch
            android:text="@string/daily_reminder_switch_name"
            android:id="@+id/reminder_enabled_switch"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"

            android:checked="true"
            android:onClick="timePickerOnClick"
            />

        <TimePicker
            android:id="@+id/reminder_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            />



    </LinearLayout>


</LinearLayout>