<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".drill.EndDrillFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/end_drill_drill_end_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="312dp"
            android:background="@color/colorPrimary"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/end_drill_drill_end_text_view"
                android:layout_width="match_parent"
                android:layout_height="104dp"

                android:text="@string/endOfDrill"
                android:textSize="48sp"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                />

            <ImageView
                android:id="@+id/end_drill_repeatah_image_view"
                android:layout_width="match_parent"
                android:layout_height="208dp"
                android:layout_below="@id/end_drill_drill_end_text_view"

                android:src="@mipmap/ic_launcher"
                android:background="@color/colorPrimary"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/end_drill_score_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:background="@color/colorPrimaryDark"

            app:layout_constraintTop_toBottomOf="@+id/end_drill_answers_relative_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/end_drill_score_text_view"
                android:layout_width="match_parent"
                android:layout_height="104dp"

                android:text="@string/yourScore"
                android:textSize="32sp"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                />

            <RatingBar
                android:id="@+id/end_drill_score_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="80dp"

                android:paddingVertical="16dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/end_drill_score_text_view"

                android:numStars="5"
                android:progressTint="@color/colorOrange"
                android:progressBackgroundTint="@color/colorDarkGrey"
                android:secondaryProgressTint="@color/colorOrange"
                android:isIndicator="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/end_drill_correct_answers_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:background="@color/colorPrimary"

            app:layout_constraintTop_toBottomOf="@id/end_drill_score_relative_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <TextView
                android:id="@+id/end_drill_number_of_correct_answers_text_view"
                android:layout_width="match_parent"
                android:layout_height="104dp"

                android:text="@string/numOfCorrectAnswers"
                android:textSize="32sp"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                />

            <RatingBar
                android:id="@+id/end_drill_correct_answers_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="80dp"

                android:paddingVertical="16dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/end_drill_number_of_correct_answers_text_view"

                android:numStars="5"
                android:progressTint="@color/colorOrange"
                android:progressBackgroundTint="@color/colorDarkGrey"
                android:secondaryProgressTint="@color/colorOrange"
                android:isIndicator="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/end_drill_time_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:background="@color/colorPrimaryDark"

            app:layout_constraintTop_toBottomOf="@id/end_drill_correct_answers_relative_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/end_drill_time_spent_text_view"
                android:layout_width="match_parent"
                android:layout_height="104dp"

                android:text="@string/timeSpentOnTest"
                android:textSize="32sp"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                />

            <RatingBar
                android:id="@+id/end_drill_time_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="80dp"

                android:paddingVertical="16dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/end_drill_time_spent_text_view"

                android:numStars="5"
                android:progressTint="@color/colorOrange"
                android:progressBackgroundTint="@color/colorDarkGrey"
                android:secondaryProgressTint="@color/colorOrange"
                android:isIndicator="true"
                />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/end_drill_answers_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:background="@color/colorPeaGreen"
            app:layout_constraintTop_toBottomOf="@id/end_drill_drill_end_relative_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/end_drill_show_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/end_drill_lightbulb_image_view"

                    android:text="@string/show_answers_after_test"
                    android:textColor="@color/colorWhite"
                    android:textSize="40sp"
                    android:gravity="end"

                    />

                <ImageView
                    android:id="@+id/end_drill_lightbulb_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/end_drill_show_answers"

                    android:src="@drawable/ic_lightbulb_outline_white_104dp"

                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/end_drill_finish_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:background="@color/colorPink"
            app:layout_constraintTop_toBottomOf="@id/end_drill_time_relative_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/end_drill_finish_drill_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"

                    android:text="@string/finishDrill"
                    android:textColor="@color/colorWhite"
                    android:textSize="48sp"
                    android:gravity="center"
                    />

                <ImageView
                    android:id="@+id/end_drill_finish_icon_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/end_drill_finish_drill_text_view"

                    android:layout_marginStart="4dp"

                    android:src="@drawable/ic_check_box_white_64dp"
                    />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>