<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".drill.QuestionFragment">

    <ProgressBar
        android:id="@+id/question_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"

        android:progressTint="@color/colorSkyBlue"
        />

    <TextView
        android:id="@+id/question_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_below="@id/question_progressBar"

        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"

        android:text="@string/time"
        android:textSize="32sp"
        android:textColor="@color/colorDarkGrey"
        />

    <Chronometer
        android:id="@+id/question_time_chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toEndOf="@id/question_time_text_view"
        android:layout_below="@id/question_progressBar"

        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"

        android:textSize="32sp"
        android:textColor="@color/colorDarkGrey"
        />

    <TextView
        android:id="@+id/question_points_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_below="@id/question_progressBar"

        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"

        android:text="@string/points"
        android:textSize="32sp"
        android:textColor="@color/colorDarkGrey"
        />

    <TextView
        android:id="@+id/question_text_text_view"
        android:layout_width="match_parent"
        android:layout_height="160dp"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/question_time_text_view"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"

        android:textSize="24sp"
        android:gravity="center"

        />

    <Button
        android:id="@+id/question_answer_one_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/question_text_text_view"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"

        android:background="@color/colorRed"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/question_answer_two_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/question_answer_one_button"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"

        android:background="@color/colorGreen"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/question_answer_three_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/question_answer_two_button"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"

        android:background="@color/colorBlue"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/question_answer_four_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/question_answer_three_button"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"

        android:background="@color/colorOrange"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/question_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="24dp"

        android:text="@string/next"
        android:textSize="16sp"
        android:drawableEnd="@drawable/ic_navigate_next_white_24dp"
        tools:ignore="RtlSymmetry"
        />


</RelativeLayout>